@@ -11,6 +11,9 @@ debhelper (12.9.1) UNRELEASED; urgency=medium
     compiler versions.  Thanks to Matthias Klose for the
     suggestion and for providing the exact options.
     (Closes: #939656)
+  * dh: Tweak the command-skipping optimization to skip commands
+    in a few more cases when the command is known not to react to
+    command line options.
 
   [ Nicholas Guriev ]
   * cmake: Verbose autogen rules.
